--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,25 @@
 {
-    "manifest_version": 3,
-    "name": "Test Tracker",
-    "version": "1.0",
-    "description": "Displays test results",
-    "permissions": [
-      "storage"
-    ],
-    "action": {
-      "default_popup": "popup.html",
-      "default_icon": "icon48.png"
-    },
-    "background": {
-      "service_worker": "background.js"
-    },
-    "icons": {
-      "16": "icon48.png",
-      "48": "icon48.png",
-      "128": "icon48.png"
+  "manifest_version": 3,
+  "name": "Playwright Test Results",
+  "version": "1.0",
+  "description": "View Playwright test results from a local file or GitHub repository",
+  "background": {
+    "service_worker": "background.js"
+  },
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
     }
-  }
-  
+  },
+  "permissions": [
+    "storage",
+    "activeTab"
+  ],
+  "host_permissions": [
+    "file:///*",
+    "https://raw.githubusercontent.com/*"
+  ]
+}
